# dns-renew

./: Cargo.toml  README.md
.github/workflows/: check.yml  ci.yml  docker.yml
docker/: Dockerfile
examples/: dns-renew.toml.example
examples/name-conf.d/: example-cf.toml  example.toml
src/: config.rs  dns.rs  ip.rs  main.rs  query.rs  update.rs
