[package]
name = "dns-renew"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
futures-util = "0.3"
getset = "0.1.3"
hickory-proto = { version = "0.24.1", features = ["dns-over-native-tls", "tokio-runtime"] }
humantime-serde = "1.1.1"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "default-tls", "deflate", "gzip", "http2"] }
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
strfmt = "0.2.4"
tokio = { version = "1.41", features = ["rt-multi-thread"] }
toml = "0.8.19"
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "env-filter", "tracing-log"] }
